# social_wave

./: .dockerignore  .env  .gitignore  Dockerfile  alembic.ini  docker-compose.local.yml  docker-compose.yml  frontend.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1d40187e866a_mobile_number_optional.py  52d4a23cf286_added_mobile_number_for_user.py  5a374832ada2_initial.py  837f00bd98d0_added_like_and_comments_option.py  b8c4e91d2f03_add_chat_history_table.py  fb5830bb20ee_created_field_changes.py
app/: app.py  db.py  dependencies.py  images.py  middlewares.py  schemas.py  users.py
app/config/: settings.py
app/services/: ai_services.py
app/tests/: comment_test.py  database.py  like_test.py  upload_test.py
scripts/: entrypoint.sh
